--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,7 +68,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.1"
 
     // Coil
-    implementation "io.coil-kt:coil:1.1.1"
+    implementation("io.coil-kt:coil-compose:2.1.0")
     implementation "com.google.accompanist:accompanist-coil:0.7.0"
 
     //Dagger - Hilt
